--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Unfancy</h1>
-    <p>This is a basic index.html page.</p>
+    <p>This is a basic index.html page...</p>
     <script src="script.js"></script>
 </body>
 </html>
