--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unfancy</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/no-attribution-icon-svg-download-png-2396447.png?f=webp" type="image/png">
 </head>
 <body>
-    <h1>Welcome to Unfancy</h1>
-    <p>This is a basic index.html page.</p>
+    <div class="main-card">
+        <h1>Willkommen bei <span style="color:var(--accent,#3b82f6);">Unfancy</span></h1>
+        <p>Deine persönliche League of Legends Stats-Übersicht.<br>
+        <a class="stats-link" href="lol-stats.html">→ Zu deinen League-Stats</a></p>
+    </div>
+    <footer>
+        <p style="text-align:center;color:var(--accent2,#7dd3fc);margin-top:40px;font-size:1em;">&copy; 2025 Unfancy</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
