--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="main-card">
         <h1>Willkommen bei <span style="color:var(--accent,#3b82f6);">Unfancy</span></h1>
         <p>Deine persönliche League of Legends Stats-Übersicht.<br>
-        <a class="stats-link" href="lol-stats.html">→ Zu deinen League-Stats</a></p>
+        <a class="stats-link" href="lol-stats/lol-stats.html">→ Zu deinen League-Stats</a></p>
     </div>
     <footer>
-        <p style="text-align:center;color:var(--accent2,#7dd3fc);margin-top:40px;font-size:1em;">&copy; 2025 Unfancy</p>
+        <p style="text-align:center;color:var(--accent2,#7dd3fc);margin-top:40px;font-size:1em;">2025 Unfancy - Laurin</p>
     </footer>
     <script src="script.js"></script>
 </body>
