link erneut angepasst

--- a/lol-stats/index.html
+++ b/lol-stats/index.html
@@ -131,6 +131,6 @@
 </head>
 <body>
     <div id="lol-stats-container"></div>
-    <p style="max-width:900px;margin:40px auto 0;text-align:center;"><a href="./index.html">Zurück zur Startseite</a></p>
+    <p style="max-width:900px;margin:40px auto 0;text-align:center;"><a href="../index.html">Zurück zur Startseite</a></p>
 </body>
 </html>
