--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>Willkommen bei <span style="color:var(--accent,#3b82f6);">Unfancy</span></h1>
         <p>Meine persönliche League of Legends Stats-Übersicht.<br>
         <a class="stats-link" href="lol-stats/index.html">→ Zu meinen League-Stats</a></p>
+        <p>Und meine Steam-Statistiken:<br>
+        <a class="stats-link" href="steam-stats/index.html">→ Zu meinen Steam-Stats</a></p>
     </div>
     <footer>
         <p style="text-align:center;color:var(--accent2,#7dd3fc);margin-top:40px;font-size:1em;">2025 Unfancy - Laurin</p>
