added socials link on mainpage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a class="stats-link" href="lol-stats/index.html">→ Zu meinen League-Stats</a></p>
         <p>Und meine Steam-Statistiken:<br>
         <a class="stats-link" href="steam-stats/index.html">→ Zu meinen Steam-Stats</a></p>
+        <p>Meine Socials:<br>
+        <a class="stats-link" href="socials/index.html">→ Zu meinen Socials</a></p>
     </div>
     <footer>
         <p style="text-align:center;color:var(--accent2,#7dd3fc);margin-top:40px;font-size:1em;">2025 Unfancy - Laurin</p>
