--- a/socials/index.html
+++ b/socials/index.html
@@ -5,6 +5,7 @@
   <title>Socials – Neueste Posts</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/no-attribution-icon-svg-download-png-2396447.png?f=webp" type="image/png">
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="./socials.css" />
 </head>
@@ -14,7 +15,11 @@
 
     <section class="social-section">
       <header class="social-header">
-        <img src="https://www.youtube.com/s/desktop/fe8b1f51/img/favicon_144x144.png" alt="" />
+        <!-- YouTube Icon -->
+        <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor" d="M23.5 6.2a4 4 0 0 0-2.8-2.8C18.9 3 12 3 12 3s-6.9 0-8.7.4A4 4 0 0 0 .5 6.2 41 41 0 0 0 0 12a41 41 0 0 0 .5 5.8 4 4 0 0 0 2.8 2.8C5.1 21 12 21 12 21s6.9 0 8.7-.4a4 4 0 0 0 2.8-2.8A41 41 0 0 0 24 12a41 41 0 0 0-.5-5.8Z"/>
+            <path fill="#fff" d="M9.75 8.5v7l6-3.5-6-3.5Z"/>
+        </svg>
         <h2>Letztes YouTube-Video</h2>
         <a class="profile-link" href="https://www.youtube.com/@Nirlau61" target="_blank" rel="noopener">Profil öffnen</a>
       </header>
@@ -25,10 +30,16 @@
 
     <section class="social-section">
       <header class="social-header">
-        <img src="https://static.cdninstagram.com/rsrc.php/v3/yr/r/0guBQDYW-8H.png" alt="" />
+        <!-- Instagram Icon -->
+        <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true">
+          <path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Z"/>
+          <circle fill="#fff" cx="12" cy="12" r="3.5"/>
+          <circle fill="#fff" cx="17.5" cy="6.5" r="1"/>
+        </svg>
         <h2>Letzter Instagram-Post</h2>
         <a class="profile-link" href="https://www.instagram.com/nirlau61/" target="_blank" rel="noopener">Profil öffnen</a>
       </header>
+
       <div id="instagram-latest" class="embed-wrap" role="region" aria-live="polite">
         <p class="loading">Lade letzten Post…</p>
       </div>
