added return button on page end

--- a/socials/index.html
+++ b/socials/index.html
@@ -60,4 +60,8 @@
   </script>
   <script src="./socials.js" type="module"></script>
 </body>
+<body>
+    <div id="socials-container"></div>
+    <p style="max-width:900px;margin:40px auto 0;text-align:center;"><a href="../index.html">Zurück zur Startseite</a></p>
+</body>
 </html>
