return buttons angepasst

--- a/socials/index.html
+++ b/socials/index.html
@@ -43,9 +43,12 @@
       </div>
     </section>
 
-    <p style="max-width:900px;margin:40px auto 0;text-align:center;">
-      <a href="../index.html">Zurück zur Startseite</a>
-    </p>
+    <div class="main-card steam">
+        <h1>Steam Stats</h1>
+        <div id="socials"></div>
+        <div id="socials-container"></div>
+        <a href="../index.html" class="stats-link">Zurück zur Startseite</a>
+    </div>
   </main>
 </body>
 </html>
