--- a/lol-stats/index.html
+++ b/lol-stats/index.html
@@ -131,7 +131,11 @@
     <script defer src="lol-stats.js"></script>
 </head>
 <body>
+  <div class="main-card steam">
+    <h1>Steam Stats</h1>
+    <div id="lol-profile"></div>
     <div id="lol-stats-container"></div>
-    <p style="max-width:900px;margin:40px auto 0;text-align:center;"><a href="../index.html">Zurück zur Startseite</a></p>
+    <a href="../index.html" class="stats-link">Zurück zur Startseite</a>
+  </div>
 </body>
 </html>
