used native instagram embed

--- a/socials/index.html
+++ b/socials/index.html
@@ -30,17 +30,24 @@
     </section>
 
     <section class="social-section">
-      <header class="social-header">
-        <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><rect width="24" height="24" rx="6" fill="#E1306C"/><circle cx="12" cy="12" r="5" fill="#fff"/><circle cx="18" cy="6" r="1.5" fill="#fff"/></svg>
+    <header class="social-header">
+        <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true">
+        <rect width="24" height="24" rx="6" fill="#E1306C"/>
+        <circle cx="12" cy="12" r="5" fill="#fff"/>
+        <circle cx="18" cy="6" r="1.5" fill="#fff"/>
+        </svg>
         <h2>Letzter Instagram-Post</h2>
         <a class="profile-link" href="https://www.instagram.com/nirlau61/" target="_blank" rel="noopener">Profil öffnen</a>
-      </header>
-      <div style="margin:1em auto;text-align:center;">
-        <!-- Manuell letzten Post verlinken -->
-        <a href="https://www.instagram.com/p/DKpXzNHMT6G/" target="_blank" rel="noopener">
-          <img src="https://instagram.com/p/DKpXzNHMT6G/media/?size=l" alt="Letzter Instagram-Post" style="max-width:320px;border-radius:12px;">
-        </a>
-      </div>
+    </header>
+
+    <!-- offizielles Embed -->
+    <blockquote 
+        class="instagram-media" 
+        data-instgrm-permalink="https://www.instagram.com/p/DKpXzNHMT6G/" 
+        data-instgrm-version="14" 
+        style="margin:1em auto;max-width:540px;min-width:326px;width:100%;">
+    </blockquote>
+    <script async src="https://www.instagram.com/embed.js"></script>
     </section>
 
     <div class="main-card steam">
