--- a/socials/index.html
+++ b/socials/index.html
@@ -15,7 +15,7 @@
     <section class="social-section">
       <header class="social-header">
         <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><rect width="24" height="24" rx="6" fill="#FF0000"/><polygon points="10,8 16,12 10,16" fill="#fff"/></svg>
-        <h2>Letztes YouTube-Video</h2>
+        <h2>Bestes YouTube-Video</h2>
         <a class="profile-link" href="https://www.youtube.com/@Nirlau61" target="_blank" rel="noopener">Profil öffnen</a>
       </header>
       <div class="yt-16x9" style="margin:1em auto;">
@@ -51,7 +51,6 @@
     </section>
 
     <div class="main-card steam">
-        <h1>Steam Stats</h1>
         <div id="socials"></div>
         <div id="socials-container"></div>
         <a href="../index.html" class="stats-link">Zurück zur Startseite</a>
