--- a/lol-stats/index.html
+++ b/lol-stats/index.html
@@ -131,10 +131,10 @@
     <script defer src="lol-stats.js"></script>
 </head>
 <body>
-  <div class="main-card steam">
+  <div class="main-card lol">
     <div id="lol-profile"></div>
     <div id="lol-stats-container"></div>
-    <a href="../index.html" class="stats-link">Zurück zur Startseite</a>
+    <a href="../index.html" class="stats-link" style="display:inline-block;margin-top:32px;">Zurück zur Startseite</a>
   </div>
 </body>
 </html>
