--- a/socials/index.html
+++ b/socials/index.html
@@ -53,7 +53,7 @@
     <div class="main-card steam">
         <div id="socials"></div>
         <div id="socials-container"></div>
-        <a href="../index.html" class="stats-link">Zurück zur Startseite</a>
+        <a href="../index.html" class="stats-link" style="display:inline-block;margin-top:32px;">Zurück zur Startseite</a>
     </div>
   </main>
 </body>
