button mal wieder angepasst

--- a/socials/index.html
+++ b/socials/index.html
@@ -50,7 +50,7 @@
     <script async src="https://www.instagram.com/embed.js"></script>
     </section>
 
-    <div class="main-card steam">
+    <div class="main-card socials">
         <div id="socials"></div>
         <div id="socials-container"></div>
         <a href="../index.html" class="stats-link" style="display:inline-block;margin-top:32px;">Zurück zur Startseite</a>
