--- a/lol-stats/index.html
+++ b/lol-stats/index.html
@@ -47,6 +47,10 @@
         p, li, td, th {
             font-size: 1.08em;
         }
+        .main-card.lol {
+            max-width: 900px;
+        }
+
         .champ-list {
             display: flex;
             gap: 32px;
@@ -134,7 +138,7 @@
   <div class="main-card lol">
     <div id="lol-profile"></div>
     <div id="lol-stats-container"></div>
-    <a href="../index.html" class="stats-link" style="display:inline-block;margin-top:32px;">Zurück zur Startseite</a>
+    <a href="../index.html" class="stats-link">Zurück zur Startseite</a>
   </div>
 </body>
 </html>
