--- a/socials/index.html
+++ b/socials/index.html
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <title>Socials – Neueste Posts</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../style.css" />
-  <link rel="stylesheet" href="./socials.css" />
-</head>
 <body>
   <main class="main-card socials">
     <h1>Socials</h1>
 
     <section class="social-section">
       <header class="social-header">
-        <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><rect width="24" height="24" rx="6" fill="#FF0000"/><polygon points="10,8 16,12 10,16" fill="#fff"/></svg>
+        <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true">
+          <rect width="24" height="24" rx="6" fill="#FF0000"/><polygon points="10,8 16,12 10,16" fill="#fff"/>
+        </svg>
         <h2>Bestes YouTube-Video</h2>
         <a class="profile-link" href="https://www.youtube.com/@Nirlau61" target="_blank" rel="noopener">Profil öffnen</a>
       </header>
       <div class="yt-16x9" style="margin:1em auto;">
-        <!-- Manuell das letzte Video einbetten -->
         <iframe
           src="https://www.youtube.com/embed/3me98J7VB1w"
           title="Bestes YouTube-Video"
@@ -30,31 +21,24 @@
     </section>
 
     <section class="social-section">
-    <header class="social-header">
+      <header class="social-header">
         <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true">
-        <rect width="24" height="24" rx="6" fill="#E1306C"/>
-        <circle cx="12" cy="12" r="5" fill="#fff"/>
-        <circle cx="18" cy="6" r="1.5" fill="#fff"/>
+          <rect width="24" height="24" rx="6" fill="#E1306C"/>
+          <circle cx="12" cy="12" r="5" fill="#fff"/>
+          <circle cx="18" cy="6" r="1.5" fill="#fff"/>
         </svg>
         <h2>Letzter Instagram-Post</h2>
         <a class="profile-link" href="https://www.instagram.com/nirlau61/" target="_blank" rel="noopener">Profil öffnen</a>
-    </header>
+      </header>
 
-    <!-- offizielles Embed -->
-    <blockquote 
-        class="instagram-media" 
-        data-instgrm-permalink="https://www.instagram.com/p/DKpXzNHMT6G/" 
-        data-instgrm-version="14" 
+      <blockquote class="instagram-media"
+        data-instgrm-permalink="https://www.instagram.com/p/DKpXzNHMT6G/"
+        data-instgrm-version="14"
         style="margin:1em auto;max-width:540px;min-width:326px;width:100%;">
-    </blockquote>
-    <script async src="https://www.instagram.com/embed.js"></script>
+      </blockquote>
+      <script async src="https://www.instagram.com/embed.js"></script>
     </section>
 
-    <div class="main-card socials">
-        <div id="socials"></div>
-        <div id="socials-container"></div>
-        <a href="../index.html" class="stats-link" style="display:inline-block;margin-top:32px;">Zurück zur Startseite</a>
-    </div>
+    <a href="../index.html" class="stats-link" style="margin-top:32px;">Zurück zur Startseite</a>
   </main>
 </body>
-</html>
