--- a/socials/index.html
+++ b/socials/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Socials – Neueste Posts</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="./socials.css" />
+</head>
 <body>
   <main class="main-card socials">
     <h1>Socials</h1>
@@ -39,6 +49,8 @@
       <script async src="https://www.instagram.com/embed.js"></script>
     </section>
 
+    <!-- Button gehört in DIESE Karte -->
     <a href="../index.html" class="stats-link" style="margin-top:32px;">Zurück zur Startseite</a>
   </main>
 </body>
+</html>
