--- a/steam-stats/index.html
+++ b/steam-stats/index.html
@@ -10,7 +10,7 @@
     /* nur auf dieser Seite: breitere Hauptkarte für 4 Spalten */
     .main-card.steam { max-width: 1040px; }
 
-    .steam-games-list {
+    /* .steam-games-list {
       display: flex;
       flex-wrap: wrap;
       gap: 24px;
@@ -19,16 +19,16 @@
       margin-bottom: 1.5em;
       padding: 0;
       list-style: none;
-    }
-    .steam-game-card {
+    } */
+    /* .steam-game-card {
       background: var(--bg-card, #23262f);
       border-radius: 12px;
       box-shadow: 0 2px 8px #0004;
       padding: 14px 12px 10px 12px;
-      width: 220px; /* feste Breite -> 4 Spalten bei ~1040px */
+      width: 220px;
       text-align: center;
       transition: transform 0.15s;
-    }
+    } */
     .steam-game-card:hover {
       transform: translateY(-4px) scale(1.04);
       box-shadow: 0 6px 24px #0007;
@@ -53,7 +53,14 @@
       font-size: 0.96em;
       margin-bottom: 2px;
     }
-    @media (max-width: 900px) {
+    @media (max-width: 600px) {
+        .main-card.steam {
+            max-width: 100%;
+            margin: 40px 12px;
+            padding: 20px;
+        }
+    }
+    /* @media (max-width: 900px) {
       .steam-game-card { width: 200px; }
       .steam-game-card img { width: 180px; height: 68px; }
     }
@@ -61,7 +68,7 @@
       .steam-games-list { gap: 12px; }
       .steam-game-card { width: 150px; padding: 10px 6px 8px; }
       .steam-game-card img { width: 130px; height: 48px; }
-    }
+    } */
   </style>
 </head>
 <body>
