--- a/lol-stats/index.html
+++ b/lol-stats/index.html
@@ -128,6 +128,13 @@
             flex-wrap: wrap;
             justify-content: center;
         }
+          @media (max-width: 600px) {
+            .main-card.lol {
+            max-width: 100%;
+            margin: 40px 12px;
+            padding: 24px 16px;
+          }
+        }
         .champ-list li {
             min-width: 90px;
             margin-bottom: 12px;
