--- a/socials/index.html
+++ b/socials/index.html
@@ -5,6 +5,7 @@
   <title>Socials – Neueste Posts</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/no-attribution-icon-svg-download-png-2396447.png?f=webp" type="image/png">
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="./socials.css" />
 </head>
