--- a/steam-stats/index.html
+++ b/steam-stats/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/no-attribution-icon-svg-download-png-2396447.png?f=webp" type="image/png">
   <style>
     /* nur auf dieser Seite: breitere Hauptkarte für 4 Spalten */
     .main-card.steam { max-width: 1040px; }
