adjusted max width

--- a/steam-stats/index.html
+++ b/steam-stats/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/no-attribution-icon-svg-download-png-2396447.png?f=webp" type="image/png">
   <style>
     /* nur auf dieser Seite: breitere Hauptkarte für 4 Spalten */
-    .main-card.steam { max-width: 1040px; }
+    .main-card.steam { max-width: 100%; }
 
     /* .steam-games-list {
       display: flex;
