--- a/steam-stats/index.html
+++ b/steam-stats/index.html
@@ -56,8 +56,9 @@
     }
     @media (max-width: 1040px) {
         .main-card.steam {
-            max-width: 100%;
-            margin: 40px 12px;
+            max-width: 1040px;
+            width: 100%;      /* neu: füllt den verfügbaren Platz */
+            margin: 40px auto;/* zentriert */
             padding: 20px;
         }
     }
